--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
     background-color: red;
+}
+
+.navbar__group{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
