--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,10 +5,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: red;
+    background-color: #0b0c0e;
+    padding: 14px 80px;
 }
 
-.navbar__group{
+.navbar__group {
     width: 100%;
     display: flex;
     flex-direction: row;
