--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap");
+@import url("https://cdn-uicons.flaticon.com/2.5.1/uicons-regular-straight/css/uicons-regular-straight.css");
+@import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-solid-rounded/css/uicons-solid-rounded.css');
+
+@import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
 *,
 *::before,
@@ -11,3 +16,15 @@
 body {
     font-family: "Yantramanav", sans-serif;
 }
+
+/* body::-webkit-scrollbar{
+    width:7px
+    }
+    body::-webkit-scrollbar-track{
+    -webkit-box-shadow:inset 0 0 4px rgba(0,0,0,.3)
+    }
+    body::-webkit-scrollbar-thumb{
+    background-color:#31adff;
+    outline:1px solid #64c1ff;
+    border-radius:.6rem
+    } */
