--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,16 @@
-.main-layout {
+.footer {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: red;
+    padding: 18px;
+    margin-top: 32px;
+}
+
+.footer {
+    color: white;
+
 }
