--- a/src/components/Navbar/components/Search/Search.css
+++ b/src/components/Navbar/components/Search/Search.css
@@ -24,7 +24,7 @@
     font-size: 16px;
     font-weight: 500;
     color: #F5F5F5;
-    padding: 14px 32px 14px 16px;
+    padding: 12px 32px 12px 16px;
 }
 
 .search__input::placeholder {
@@ -34,18 +34,13 @@
 .search__textbox-wrapper>i[class^="fi"] {
     position: absolute;
     top: 50%;
-    right: 0px;
+    right: 5px;
     transform: translate(-50%, -50%);
     display: flex;
-    color: green;
-    font-size: 14px;
+    color: #31ADFF;
+    font-size: 12px;
     cursor: pointer;
 }
-
-
-
-
-
 
 .search__button-wrapper {
     display: flex;
@@ -61,13 +56,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: none;
-    outline: none;
     background-color: #F7EF47;
+    border: none;
     border-radius: 0px 8px 8px 0px;
+    outline: none;
     padding: 14px;
-    cursor: pointer;
     transition: background-color 160ms linear;
+    cursor: pointer;
+}
+
+.search__button>i[class^="fi"] {
+    display: flex;
+    font-size: 16px;
 }
 
 .search__button:hover {
