--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 @import url("https://cdn-uicons.flaticon.com/2.5.1/uicons-regular-straight/css/uicons-regular-straight.css");
 @import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-solid-rounded/css/uicons-solid-rounded.css');
 
-@import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-bold-rounded/css/uicons-bold-rounded.css');
-@import url('https://cdn-uicons.flaticon.com/2.5.1/uicons-regular-rounded/css/uicons-regular-rounded.css');
-
 *,
 *::before,
 *::after {
@@ -13,8 +10,24 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: red;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: blue;
+}
+
+
 body {
+    background-color: #0b0c0e;
     font-family: "Yantramanav", sans-serif;
+    /*     background-image: url("https://avatars.mds.yandex.net/i?id=39a8952c2ed9dee56bb53073cd3455bb_l-5250377-images-thumbs&n=13");
+    background-size: cover; */
 }
 
 /* body::-webkit-scrollbar{
