--- a/src/components/common/SectionSingleContent/SectionSingleContent.css
+++ b/src/components/common/SectionSingleContent/SectionSingleContent.css
@@ -1,15 +1,9 @@
-.section__content {
+.section__single-content {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 48px 96px;
-}
-
-.section__title {
-    font-size: 32px;
-    color: #FFFFFF;
-    margin-bottom: 32px;
+    padding: 128px 0px;
 }
