--- a/src/components/MovieSingle/MovieSingle.css
+++ b/src/components/MovieSingle/MovieSingle.css
@@ -195,3 +195,53 @@
 .movie-single__download-btn-text {
     margin-right: 8px;
 }
+
+.youtube__dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10240;
+}
+
+.youtube__dialog-content {
+    position: relative;
+    width: 80%;
+    max-width: 800px;
+    height: 80%;
+    max-height: 450px;
+    padding: 24px;
+    overflow: hidden;
+}
+
+.youtube__dialog-content>iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+}
+
+.youtube__dialog-close-btn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 24px;
+    color: #31ADFF;
+    cursor: pointer;
+    z-index: 20480;
+    transition: color 160ms linear;
+}
+
+.youtube__dialog-close-btn:hover {
+    color: #0098FD;
+}
