--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,4 +1,33 @@
+.movie__loading-item {
+    height: 364px;
+    width: 100%;
+    background: linear-gradient(90deg, rgba(200, 200, 200, 0.3), rgba(240, 240, 240, 0.3), rgba(200, 200, 200, 0.3));
+    background-size: 200% 100%;
+    margin-top: 48px;
+    border-radius: 8px;
+    animation: loading 1.5s infinite;
+    position: relative;
+    overflow: hidden;
+}
+
+@keyframes loading {
+    0% {
+        background-position: -100% 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
+
 .movie__list {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 48px;
+}
+
+.movie__loading {
     width: 100%;
     height: auto;
     display: grid;
