--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,22 +1,10 @@
-.movie__loading-item {
-    height: 364px;
+.movie__container {
     width: 100%;
-    background: linear-gradient(90deg, rgba(200, 200, 200, 0.3), rgba(240, 240, 240, 0.3), rgba(200, 200, 200, 0.3));
-    background-size: 200% 100%;
-    margin-top: 48px;
-    border-radius: 8px;
-    animation: loading 1.5s infinite;
-    position: relative;
-    overflow: hidden;
-}
-
-@keyframes loading {
-    0% {
-        background-position: -100% 0;
-    }
-    100% {
-        background-position: 100% 0;
-    }
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .movie__list {
@@ -27,10 +15,29 @@
     gap: 48px;
 }
 
-.movie__loading {
+.movie__skeletons {
     width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 48px;
+    margin-top: 48px;
+}
+
+.movie__skeleton {
+    width: 100%;
+    height: 364px;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 8px;
+    animation: loadingSkeleton 1536ms ease-in-out infinite alternate;
+}
+
+@keyframes loadingSkeleton {
+    from {
+        background-color: rgba(255, 255, 255, 0.05);
+    }
+
+    to {
+        background-color: rgba(255, 255, 255, 0.2);
+    }
 }
